--- a/baca.html
+++ b/baca.html
@@ -42,5 +42,6 @@
         window.onload = muatArtikel;
     </script>
     <script src="nofollow.js"></script>
+     <script src="tags.js"></script>
 </body>
 </html>
